--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,20 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <style>
+      .card .author .avatar {
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: 5px;
+  }
+  .img-raised {
+    -webkit-box-shadow: 0 10px 25px 0 rgb(0 0 0 / 30%);
+    box-shadow: 0 10px 25px 0 rgb(0 0 0 / 30%);
+  }
 
+    </style>
   </head>
   <body class="sidebar-collapse">
     <noscript>
